# metta

./: .gitignore  FEATURE_EXTRACTION.md  README.md  alembic.ini  architecture.md  audio_features.db  extract_features.py  extract_from_data.py  last_played.py  logging_config.py  main.py  metadata.py  model.md  output.py  pyproject.toml  settings.py  todo.md  view_features.py
cli/: main.py
core/: feature_extractor.py  features.py  metadata_writer.py
db/: __init__.py  connection.py  engine.py  session.py
dependencies/: __init__.py  last_fm.py  listenbrainz.py
models/: __init__.py  album.py  artist.py  audio_features.py  base.py  genre.py  identifiers.py  listening.py  music_collection.py  playlist.py  tag.py  tag_tracks.py  track.py
repositories/: base.py  track.py
routes/: __init__.py  features.py  last_fm.py  track.py
wrappers/: last_fm_wrapper.py
