[project]
name = "metta"
version = "0.1.0"
description = "Audio metadata extraction tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "fastapi[standard]>=0.121.0",
    "librosa>=0.11.0",
    "mutagen>=1.47.0",
    "pydantic-settings>=2.11.0",
    "pylast>=6.0.0",
    "python-multipart>=0.0.20",
    "ruff>=0.14.5",
    "sqlmodel>=0.0.27",
    "tool>=0.8.0",
    "uvicorn>=0.38.0",
]
